<resources>
    <string name="app_name">FlashCard Project</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_text">Dont have an account? Sign Up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="all_flash_cards">All Flash Cards</string>
    <string name="add_new_card">Add New Flash Card</string>
    <string name="review_today">Review Today Cards</string>
    <string name="flash_card">Flash Card</string>
    <string name="all_cards">All Cards</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="review_cards">Review Cards</string>
    <string name="show_meaning">Show Meaning</string>
    <string name="back_to_all_cards">Back to All Cards</string>
    <string name="right_answer">I answered right</string>
    <string name="wrong_answer">I answered wrong</string>
    <string name="meaning_of_the_word">Meaning of the Word</string>
    <string name="usage_of_the_word">Usage of the Word</string>
    <string name="add">Add</string>

    <string name="hostUrl">https://api.backendless.com</string>
    <string name="appId">E69F2B64-45AD-6350-FFAF-937C6A594200</string>
    <string name="apiKey">D25D4C13-1DA1-4FC1-8F6C-902B4944DEA5</string>

    <string name="network_connection_error">Cannot access internet!</string>
    <string name="network_general_error">Failed to save data to server!</string>
    <string name="network_json_error">Failed to interpret the data to/from server!</string>

    <string name="network_sign_in_error">Failed in sign in operation in server!</string>
    <string name="network_sign_up_error">Failed to sign up in server!</string>
    <string name="network_check_user_token_validity_error">Failed to check user-token validity with server!!</string>
    <string name="network_add_new_task_error">Failed to add new task to server!!</string>
    <string name="network_remove_task_error">Failed to remove task from server!!</string>
    <string name="network_update_is_archived_task_error">Failed to update isArchived task field in server!!</string>
    <string name="network_get_all_task_error">Failed to getAll task of user from server!!</string>
    <string name="logout">Logout</string>

</resources>
