<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AllCardsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/all_cards_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00BCD4"

        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logout_btn"
            android:onClick="logoutClicked"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/white"
            android:text="@string/logout"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/all_cards"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_all_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".76"
        app:layout_constraintTop_toBottomOf="@id/all_cards_toolbar" />

    <Button
        android:id="@+id/add_new_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_purple_matin"
        android:onClick="addNewCardClicked"
        android:text="@string/add_new_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/review_cards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_purple_matin"
        android:onClick="reviewTodayCardsClicked"
        android:text="@string/review_today"
        app:layout_constraintBottom_toTopOf="@id/add_new_card"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>