<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple_matin"
    tools:context=".activities.ReviewCardsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/review_cards"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00BCD4"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/review_cards"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/word_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@color/yellow_3_matin"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="23sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_cards"
        tools:text="My Word" />

    <Button
        android:id="@+id/pron_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:onClick="pronounciationClicked"
        android:text="@string/pronunciation"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_tv"
        app:layout_constraintWidth_percent=".7" />

    <Button
        android:id="@+id/show_meaning_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:onClick="showMeaningClicked"
        android:text="@string/show_meaning"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pron_btn"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/meaning_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/yellow_3_matin"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_meaning_btn"
        tools:height="60dp"
        tools:text="Meaning and Usage of Word" />

    <Button
        android:id="@+id/back_to_all_cards_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:text="@string/back_to_all_cards"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="backToAllCardsClicked"
        app:layout_constraintWidth_percent=".6" />

    <Button
        android:id="@+id/wrong_answer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableRight="@drawable/wrong"
        android:layout_marginBottom="10dp"
        android:onClick="iAnsweredWrongClicked"
        android:background="@color/white"
        android:text="@string/wrong_answer"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/back_to_all_cards_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent=".7" />

    <Button
        android:id="@+id/right_answer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="iAnsweredRightClicked"
        android:text="@string/right_answer"
        android:drawableRight="@drawable/right"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/wrong_answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent=".7" />


</androidx.constraintlayout.widget.ConstraintLayout>